[package]
name = "kimberlite-client"
description = "Kimberlite RPC client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
kimberlite-types.workspace = true
kimberlite-wire.workspace = true

# Core
bytes.workspace = true
thiserror.workspace = true

# Observability
tracing.workspace = true

# Optional: serde-based typed row mapping
serde = { workspace = true, optional = true }

# Optional: tokio runtime for the async client (S2.1)
tokio = { workspace = true, optional = true, features = ["net", "io-util", "sync", "rt", "macros"] }

[features]
default = ["typed-rows", "tokio"]
# Enables `Client::query_typed::<T>()` via serde deserialisation.
typed-rows = ["dep:serde"]
# Enables the async client (`AsyncClient`) backed by tokio.
# Building without this keeps `kimberlite-client` runtime-agnostic.
tokio = ["dep:tokio"]

[dev-dependencies]
tempfile.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
# Spawned in-process for the async-parity integration test.
# Path-only (no version) so `cargo publish` strips them from the
# packaged manifest. kimberlite-server + kimberlite are higher-tier
# crates published AFTER kimberlite-client; a versioned dev-dep would
# cycle the publish order. Same pattern as the kimberlite-query →
# kimberlite-sim dev-dep (commit 3638b41 "strip internal-only dev-dep
# for crates.io publish") and the broader v0.5.0 publish-order fix.
kimberlite-server = { path = "../kimberlite-server" }
kimberlite = { path = "../kimberlite" }
# ROADMAP v0.5.1 — replaces the 4× duplicated TestServer pattern in
# the e2e files below. Path-only (no version) for the same publish-
# order reason as kimberlite-server / kimberlite above.
kimberlite-test-harness = { path = "../kimberlite-test-harness" }
# Phase 6 e2e test (ROADMAP v0.5.0 item C) — hashes the wire-returned
# export body and looks up breach events by UUID.
base64 = { workspace = true }
uuid = { workspace = true }
# v0.6.0 Tier 1 #1 — `test_case` parameterises `backend_parity.rs`
# over the two harness backends (`TempDir`, `InMemory`). Workspace
# dep, no new external crate.
test-case = { workspace = true }
