[package]
name = "kimberlite-cluster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["process", "signal", "sync", "time"] }

# Kimberlite dependencies
kimberlite-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
