[package]
name = "kimberlite-cluster"
description = "Multi-node cluster orchestration for Kimberlite (not ready for public use)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["process", "signal", "sync", "time"] }

# Kimberlite dependencies
kimberlite-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.cargo-machete]
# Used in node management and error handling (stub implementation)
ignored = ["anyhow", "kimberlite-types"]
