[package]
name = "kimberlite-compliance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compliance reporting and verification for Kimberlite"
keywords = ["compliance", "hipaa", "gdpr", "soc2", "fedramp"]
categories = ["database", "cryptography"]

[lints]
workspace = true

[features]
default = []
sim = ["kimberlite-properties/sim"]

[dependencies]
# Kimberlite crates
kimberlite-types.workspace = true
kimberlite-properties.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# AUDIT-2026-04 H-2: deterministic binary serialization for the
# compliance audit log's hash-chain canonical form. postcard is
# already a workspace dep used by other hash-chain code paths.
postcard.workspace = true

# CLI
clap = { workspace = true, features = ["derive"] }

# Datetime
chrono = { workspace = true, features = ["serde"] }

# UUIDs
uuid.workspace = true

# Cryptography
hmac.workspace = true
sha2.workspace = true
kimberlite-crypto = { workspace = true, features = ["verified-crypto"] }

# PDF generation
printpdf.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile.workspace = true
# AUDIT-2026-04 S2.8: compliance state-machine property tests.
# Exercises consent/erasure lifecycle monotonicity and audit chain
# integrity over randomised command sequences.
proptest.workspace = true

[[bin]]
name = "kimberlite-compliance"
path = "src/main.rs"

# AUDIT-2026-05 T1 — auto-generated traceability matrix tool. Scans
# the workspace for AUDIT-YYYY-NN markers in source comments and
# emits a Markdown table cross-referenced against the audit
# documents under docs-internal/audit/.
[[bin]]
name = "audit-matrix"
path = "src/bin/audit-matrix.rs"
