[package]
name = "kimberlite-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Configuration merging from multiple sources
config = { version = "0.14", default-features = false, features = ["toml"] }

# XDG directory discovery
directories = "5"

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
