[package]
name = "kimberlite-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
toml = { workspace = true }

# Configuration merging from multiple sources
config = { workspace = true }

# XDG directory discovery
directories = { workspace = true }

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
