[package]
name = "kimberlite-crypto"
description = "Cryptographic primitives for Kimberlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Enable Coq-verified cryptographic implementations with proof certificates
# Specifications in specs/coq/, verified with: ./scripts/verify_coq.sh
verified-crypto = []

[dependencies]
aes-gcm.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
