[package]
name = "kimberlite-dev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal crates
kimberlite-config.workspace = true
kimberlite-server.workspace = true
kimberlite-studio.workspace = true
kimberlite = { path = "../kimberlite" }

# Core
anyhow = "1"
thiserror = "2"

# Process management
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3"

# CLI output
indicatif = "0.17"
owo-colors = { version = "4", features = ["supports-colors"] }

# Logging
tracing = "0.1"
