[package]
name = "kimberlite-dev"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false  # Development utilities

[dependencies]
# Internal crates
kimberlite-config.workspace = true
kimberlite-migration.workspace = true
kimberlite-server.workspace = true
kimberlite-studio.workspace = true
kimberlite.workspace = true

# Core
anyhow = "1"
thiserror = "2"

# Process management
tokio = { version = "1", features = ["full"] }
signal-hook = "0.4"

# CLI output
indicatif = "0.18.3"
owo-colors = { version = "4", features = ["supports-colors"] }

# Logging
tracing = "0.1"

[package.metadata.cargo-machete]
# All dependencies used in v0.5.0 TODO server implementation
ignored = ["kimberlite", "kimberlite-server", "owo-colors", "signal-hook", "thiserror", "tracing"]
