[package]
name = "kimberlite-directory"
description = "Placement routing for Kimberlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kimberlite-types.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
postcard.workspace = true
tempfile.workspace = true
