[package]
name = "kimberlite-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "C FFI exports for Kimberlite database"
license = "Apache-2.0"
repository = "https://github.com/kimberlitedb/kimberlite"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
kmb-client = { path = "../kmb-client" }
kmb-types = { path = "../kmb-types" }
kmb-wire = { path = "../kmb-wire" }

[build-dependencies]
cbindgen = "0.27"

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
test-case.workspace = true
