[package]
name = "kimberlite-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "C FFI exports for Kimberlite database (not ready for public use)"
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
kimberlite-client.workspace = true
kimberlite-types.workspace = true
kimberlite-wire.workspace = true

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
test-case.workspace = true
