[package]
name = "kimberlite-io"
description = "I/O backend abstraction for Kimberlite storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
thiserror.workspace = true

# Optional: Linux Direct I/O support
libc = { version = "0.2", optional = true }

[features]
# Enable O_DIRECT on Linux for bypassing page cache
direct_io = ["libc"]

[dev-dependencies]
tempfile.workspace = true
