[package]
name = "kimberlite-kernel"
description = "Pure functional state machine for Kimberlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kimberlite-types.workspace = true
kimberlite-properties.workspace = true
thiserror.workspace = true
serde.workspace = true
bytes.workspace = true
blake3 = "1"

[features]
# Enable property assertions for simulation testing
sim = ["kimberlite-properties/sim"]

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true
