[package]
name = "kimberlite-mcp"
description = "Kimberlite MCP server for LLM and third-party integrations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
kimberlite.workspace = true
kimberlite-types.workspace = true
kimberlite-crypto.workspace = true
kimberlite-sharing.workspace = true
kimberlite-query.workspace = true

# Core
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# Time
chrono.workspace = true

# Random for request IDs
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
