[package]
name = "kimberlite-migration"
description = "Schema migration utilities for Kimberlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Time
chrono = { workspace = true }

# Crypto (for checksums)
sha2 = { workspace = true }

# Kimberlite dependencies
kimberlite-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
