[package]
name = "kimberlite-node"
description = "Node.js N-API bindings for Kimberlite (powers @kimberlite/client)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Internal crates
kimberlite-client.workspace = true
kimberlite-types.workspace = true
kimberlite-wire.workspace = true

# napi-rs
napi = { version = "2.16", default-features = false, features = ["napi8", "async", "tokio_rt", "serde-json", "error_anyhow"] }
napi-derive = "2.16"

# Async runtime (required by napi tokio_rt)
tokio = { workspace = true }

[build-dependencies]
napi-build = "2"
