[package]
name = "kimberlite-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL query layer for Kimberlite projections"

[lints]
workspace = true

[dependencies]
# Core
bytes.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# SQL parsing
sqlparser.workspace = true

# Decimal arithmetic
rust_decimal.workspace = true

# Internal
kimberlite-types.workspace = true
kimberlite-store.workspace = true

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true

# VOPR simulation testing
kimberlite-sim.workspace = true
