[package]
name = "kimberlite-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL query layer for Kimberlite projections"

[lints]
workspace = true

[dependencies]
# Core
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

# SQL parsing
sqlparser.workspace = true

# Decimal arithmetic
rust_decimal.workspace = true

# Timestamp parsing for FOR SYSTEM_TIME AS OF '<iso8601>' time-travel
# syntax (AUDIT-2026-04 L-4).
chrono = { workspace = true, features = ["serde"] }

# Internal
kimberlite-types.workspace = true
kimberlite-store.workspace = true
kimberlite-rbac.workspace = true
kimberlite-properties.workspace = true

[features]
# Enables Antithesis-style property assertion recording for VOPR simulation.
# Without this feature, always!/sometimes!/never! macros compile to no-ops.
sim = ["kimberlite-properties/sim"]

[dev-dependencies]
proptest.workspace = true
test-case.workspace = true

# VOPR simulation testing. Path-only (no version) so `cargo publish`
# strips this from the packaged manifest — kimberlite-sim is an
# internal-only crate (publish = false) and would fail crates.io
# dep resolution if a version requirement were published.
kimberlite-sim = { path = "../kimberlite-sim" }
