[package]
name = "kimberlite-server"
description = "Kimberlite server daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
kimberlite.workspace = true
kimberlite-types.workspace = true
kimberlite-wire.workspace = true
kimberlite-query.workspace = true
kimberlite-vsr.workspace = true
kimberlite-kernel.workspace = true
kimberlite-rbac.workspace = true
kimberlite-abac.workspace = true

# Networking
mio = { version = "1", features = ["net", "os-poll"] }

# TLS
rustls.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Metrics
prometheus.workspace = true

# Time (for ABAC environment attributes)
chrono = { workspace = true, features = ["serde"] }

# Core
base64.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# OpenTelemetry (optional, enabled via `otel` feature)
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-opentelemetry = { version = "0.30", optional = true }
opentelemetry = { version = "0.29", optional = true }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.29", features = ["tonic"], optional = true }

[features]
otel = [
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]

[dev-dependencies]
tempfile.workspace = true
kimberlite-client.workspace = true

# Platform-specific signal handling
[target.'cfg(unix)'.dependencies]
signal-hook.workspace = true
signal-hook-mio.workspace = true

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"
