[package]
name = "kimberlite-server"
description = "Kimberlite server daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Internal crates
kimberlite.workspace = true
kimberlite-types.workspace = true
kimberlite-wire.workspace = true
kimberlite-query.workspace = true
kimberlite-vsr.workspace = true
kimberlite-kernel.workspace = true
kimberlite-rbac.workspace = true
kimberlite-abac.workspace = true

# Networking
mio = { version = "1", features = ["net", "os-poll"] }

# TLS
rustls.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Metrics
prometheus.workspace = true

# Time (for ABAC environment attributes)
chrono = { workspace = true, features = ["serde"] }

# Bounded queue for backpressure
crossbeam-queue.workspace = true

# Thread affinity (optional, enabled via `thread_per_core` feature)
core_affinity = { workspace = true, optional = true }

# Core
base64.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

# OpenTelemetry (optional, enabled via `otel` feature)
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-opentelemetry = { version = "0.30", optional = true }
opentelemetry = { version = "0.29", optional = true }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"], optional = true }

[features]
thread_per_core = ["dep:core_affinity"]
otel = [
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
]

[dev-dependencies]
tempfile.workspace = true
kimberlite-client.workspace = true

# Platform-specific signal handling
[target.'cfg(unix)'.dependencies]
signal-hook.workspace = true
signal-hook-mio.workspace = true

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"
