[package]
name = "kimberlite-sim-macros"
description = "Procedural macros for kimberlite-sim (internal use)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro2 = "1.0"

[package.metadata.cargo-machete]
# proc-macro2 used in proc-macro implementation
ignored = ["proc-macro2"]
